Build small container image using alpine and stripped down jdk.